adding salt to user model to add more security
