# app.js
@@ -1,5 +1,4 @@
 const express = require('express');
-const authRoutes = require('./routes/auth.routes');
 const connection = require('./config/db');
 const swaggerJsdoc = require('swagger-jsdoc');
 const swaggerUi = require('swagger-ui-express');
@@ -7,20 +6,24 @@ const errorHandlers = require('./handlers/errorHandler');
 const passport = require('passport');
 const jwtStrategy = require('./config/passport');
 const { rateLimiterByIP } = require('./utils/rateLimiter');
+const authRoutes = require('./routes/auth.routes');
+const adminRoutes = require('./routes/admin.routes');
 
 require('dotenv').config();
 connection();
-
-// Define passport js
-passport.use('JWT', jwtStrategy);
 
 const app = express();
 
 app.use(express.json());
 app.use(express.urlencoded({ extended: true }));
 
+// Define passport js
+jwtStrategy(passport);
+
 //Define routes
 app.use('/api/auth', authRoutes);
+app.use('/api/admin', adminRoutes);
+
 const port = process.env.PORT || 3000;
 
 //Define swagger
@@ -43,7 +46,7 @@ const options = {
 };
 
 app.get('/', (req, res) => {
-  res.send("hello");
+  res.send('hello');
 });
 
 const specs = swaggerJsdoc(options);
@@ -51,7 +54,7 @@ const specs = swaggerJsdoc(options);
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(specs));
 
 //Define error handlers
-app.use(errorHandlers.ErrorHandler);
+// app.use(errorHandlers.ErrorHandler);
 app.use(errorHandlers.NotFoundHandler);
 
 app.listen(process.env.PORT, () => {
