# swagger/user.components.yaml
@@ -1,4 +1,9 @@
 components:
+  securitySchemes:
+    Bearer:
+      type: apiKey
+      in: header
+      name: Authorization
   schemas:
     User:
       type: object
@@ -43,7 +48,7 @@ components:
 /api/auth/register:
   post:
     summary: Create a new user
-    tags: [Users]
+    tags: [User]
     requestBody:
       required: true
       content:
@@ -63,7 +68,7 @@ components:
 /api/auth/verify-email/{userID}/{token}:
   post:
     summary: 'Verify user email'
-    tags: [Users]
+    tags: [User]
     parameters:
       - in: path
         name: userID
@@ -84,7 +89,7 @@ components:
 /api/auth/login:
   post:
     summary: 'User login'
-    tags: [Users]
+    tags: [User]
     requestBody:
       required: true
       content:
@@ -96,3 +101,13 @@ components:
         description: User Login successfully
       400:
         description: Bad request (e.g., missing required fields)
+
+/api/admin/get-new-users:
+  get:
+    summary: 'Get all user needs to accepted'
+    tags: [Admin]
+    security:
+      - Bearer: []
+    responses:
+      200:
+        description: OK
